[TABLE MODEL] Implement CREATE/SHOW/DROP Function and user-defined scalar function